eks-lab-project/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eks-lab-service
spec:
  type: LoadBalancer
  selector:
    app: eks-lab-project
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
